--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -1,5 +1,5 @@
 [package]
-name = "DBMS"
+name = "src-tauri"
 version = "0.1.0"
 edition = "2024"
 
@@ -10,4 +10,5 @@ serde = { version = "1.0.219", features = ["derive"] }
 bincode = { version = "2.0.1", features = ["serde"] }
 thiserror = { version = "2.0.12"}
 datafusion = { version = "47.0.0" }
+byteorder = "1.5.0"
 once_cell = "1.21.3"
